# FuzzySortedDict

./: .gitignore  .travis.yml  DESCRIPTION.rst  FuzzySortedDict.py  FuzzySortedDict_test.py  LICENSE  README.rst  fuzzysorteddict.py  fuzzysorteddict_test.py  pyproject.toml  setup.py  tox.ini
FuzzySortedDict/: FuzzySortedDict.py  __init__.py
