[tool.poetry]
name = "fuzzysorteddict"
version = "1.0.1"
description = "A sorted dictionary with nearest-key lookup"
authors = ["NC State Aerial Robotics Club <aerialrobotics@ncsu.edu>"]
readme = "README.rst"
homepage = "https://github.com/ncsuarc/FuzzySortedDict"
keywords = ["dictionary"]

[tool.poetry.dependencies]
python = ">=3.5"
blist = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
